--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -58,7 +58,8 @@
     "    for sentence in re.finditer(\".*?([.?!][”’]?|\\n\\n)\", text, re.DOTALL):\n",
     "        # Turn all sequences of whitespace into a single space\n",
     "        sentence = re.sub(\"[ \\t\\n\\r]+\", \" \", sentence.group(0)).strip()\n",
-    "        yield sentence\n",
+    "        if sentence != '':\n",
+    "            yield sentence\n",
     "\n",
     "def train(filename, depth=1):\n",
     "    transitions = defaultdict(lambda: defaultdict(int))\n",
@@ -163,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "produce(tr)"
+    "[produce(tr) for x in range(5)]"
    ]
   },
   {
@@ -199,6 +200,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hmmlearn.hmm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_STATES = 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the below code, `alphabet` is the list of characters that appear in the text.  `emission_probs` is a matrix with `N_STATES` rows and `len(alphabet)` columns.  It is the initial estimate of the probability of each letter in each state.  As a \"dumb\" initial guess, we set all states to have the probability of each letter in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"alice.txt\") as fin:\n",
+    "    text = fin.read()\n",
+    "    \n",
+    "alphabet = set(list(text))\n",
+    "alphabet -= {\"\\n\"}\n",
+    "alphabet = sorted(alphabet)\n",
+    "\n",
+    "frequencies = defaultdict(int)\n",
+    "for char in text:\n",
+    "    if char == '\\n':\n",
+    "        continue\n",
+    "    frequencies[char] += 1\n",
+    "    \n",
+    "total_chars = sum([x for x in frequencies.values()])\n",
+    "    \n",
+    "emission_probs = np.stack([np.fromiter([frequencies[x] / total_chars for x in alphabet], dtype=np.float64)] * N_STATES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to transform the characters in the text into numbers, because HMMs speak numbers.  We do this manually, but we could just as easily use `sklearn.preprocessing.LabelEncoder` for it.  We need to end up with a numpy vector, each element of which is a one-element vector containing a character-number (that's what the `.reshape()` incantation is for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = list(split_text(text))\n",
+    "letter_vector = np.fromiter([alphabet.index(char) for sentence in sentences for char in sentence], dtype=np.int64).reshape(-1,1)\n",
+    "lengths = list(map(len, sentences))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(letter_vector) - sum(lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmm = hmmlearn.hmm.MultinomialHMM(n_components=N_STATES, algorithm=\"viterbi\", n_iter=100, verbose=True)\n",
+    "\n",
+    "hmm.emission_prob_ = emission_probs\n",
+    "\n",
+    "hmm.fit(letter_vector, lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbols, _states = hmm.sample(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''.join([alphabet[x[0]] for x in symbols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuning options:\n",
+    "- use words instead of letters\n",
+    "- explore viterbi vs map algorithms"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "ein.tags": "worksheet-0",
@@ -213,19 +330,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "name": "presentation.ipynb"
  },
